--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,19 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.3",
+        "friendsofsymfony/user-bundle": "^2.1",
         "jms/serializer-bundle": "^2.3",
+        "lexik/jwt-authentication-bundle": "^2.4",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
+        "symfony/maker-bundle": "^1.3",
         "symfony/orm-pack": "^1.0",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/templating": "^4.0",
+        "symfony/twig-bundle": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
