--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.3",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer": "^4.0",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/templating": "^4.0",
         "symfony/twig-bundle": "^4.0",
