Enable Param Fetcher Listener

--- a/config/packages/fos_rest.yml
+++ b/config/packages/fos_rest.yml
@@ -1,6 +1,7 @@
 fos_rest:
     routing_loader:
         include_format: false
+    param_fetcher_listener: true
     view:
         view_response_listener: 'force'
     format_listener:
