--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "jms/serializer-bundle": "^2.3",
         "lexik/jwt-authentication-bundle": "^2.4",
         "sensio/framework-extra-bundle": "^5.1",
+        "sly/notification-pusher": "^2.3",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
