--- a/composer.json
+++ b/composer.json
@@ -8,13 +8,17 @@
         "friendsofsymfony/user-bundle": "^2.1",
         "jms/serializer-bundle": "^2.3",
         "lexik/jwt-authentication-bundle": "^2.4",
+        "nelmio/api-doc-bundle": "^3.2",
         "sensio/framework-extra-bundle": "^5.1",
         "sly/notification-pusher": "^2.3",
+        "symfony/asset": "^4.0",
+        "symfony/cache": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.3",
+        "symfony/messenger": "4.1.x-dev",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer": "^4.0",
