--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "^4.0"
     },
     "config": {
