Added Param converter with workflow

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/templating": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
+        "symfony/workflow": "^4.0",
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
