--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,15 +1,25 @@
-# Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
-fos_rest: ~
-#    param_fetcher_listener:  true
-#    allowed_methods_listener:  true
-#    routing_loader: true
-#    view:
-#        view_response_listener:  true
-#    exception:
-#        codes:
-#            App\Exception\MyException: 403
-#        messages:
-#            App\Exception\MyException: Forbidden area.
+fos_rest:
+    routing_loader:
+        include_format: false
+    param_fetcher_listener: true
+    view:
+        view_response_listener: 'force'
 #    format_listener:
 #        rules:
-#            - { path: ^/api, prefer_extension: true, fallback_format: json, priorities: [ json, html ] }
+#            - {path: ^/api/v1/, priorities: [json], fallback_format: json, prefer_extension: false}
+#            - {path: ^/, priorities: [html, json, xml], fallback_format: json, prefer_extension: false}
+    body_listener:
+        enabled: false
+
+    exception:
+        enabled: true
+        codes:
+            Symfony\Component\Routing\Exception\ResourceNotFoundException: 404
+        messages:
+            Symfony\Component\Routing\Exception\ResourceNotFoundException: true
+            Symfony\Component\HttpKernel\Exception\BadRequestHttpException: true
+            \Exception: true
+    service:
+        view_handler: fos_rest.view_handler.default
+
+    versioning: true
