--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,12 +18,12 @@ framework:
     templating:
         engines: ['twig', 'php']
     cache:
-        app: cache.adapter.redis
+        app: cache.adapter.filesystem
         directory: '%kernel.cache_dir%/pools'
     #        default_doctrine_provider: ~
     #    default_psr6_provider: ~
-        default_redis_provider: 'redis://localhost'
-        default_memcached_provider: 'memcached://localhost'
+    #    default_redis_provider: 'redis://localhost'
+    #    default_memcached_provider: 'memcached://localhost'
         pools:
             meeting:
                 adapter: cache.app
