--- a/.env.dist
+++ b/.env.dist
@@ -29,3 +29,7 @@ JWT_PRIVATE_KEY_PATH=config/jwt/private.pem
 JWT_PUBLIC_KEY_PATH=config/jwt/public.pem
 JWT_PASSPHRASE=560c3a11032318743523c8098dbcc532
 ###< lexik/jwt-authentication-bundle ###
+
+###> symfony/messenger ###
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+###< symfony/messenger ###
