--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 tags
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
