--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
         "nelmio/api-doc-bundle": "^3.2",
         "sensio/framework-extra-bundle": "^5.1",
         "sly/notification-pusher": "^2.3",
+        "symfony/amqp-pack": "^1.0",
         "symfony/asset": "^4.0",
         "symfony/cache": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
-        "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.3",
-        "symfony/messenger": "4.1.x-dev",
+        "symfony/messenger": "^4.0",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer": "^4.0",
@@ -32,7 +32,8 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "symfony/dotenv": "^4.0",
-        "symfony/phpunit-bridge": "^4.0"
+        "symfony/phpunit-bridge": "^4.0",
+        "symfony/web-server-bundle": "^4.0"
     },
     "config": {
         "preferred-install": {
