--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,9 +1,9 @@
-#framework:
-#    messenger:
-#        transports:
-#            # Uncomment the following line to enable a transport named "amqp"
-#            # amqp: '%env(MESSENGER_ADAPTER_DSN)%'
-#
-#        routing:
-#            # Route your messages to the transports
-#            # 'App\Message\YourMessage': amqp
+framework:
+    messenger:
+        transports:
+            # Uncomment the following line to enable a transport named "amqp"
+            default: '%env(MESSENGER_ADAPTER_DSN)%'
+
+        routing:
+            # Route your messages to the transports
+            'App\Message\MeetingMessage': [default]
