--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -64,11 +64,17 @@ security:
                 throw_exceptions:        false
                 create_entry_point:      true
 
+        refresh:
+            pattern:  ^/api/token/refresh
+            stateless: true
+            anonymous: true
+
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/meetings/user, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api/v1/meetings, roles: [IS_AUTHENTICATED_FULLY, ROLE_API, ROLE_ADMIN] }
         - { path: ^/api/v1/tag, roles: IS_AUTHENTICATED_ANONYMOUSLY }
