--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -1,6 +1,6 @@
 nelmio_api_doc:
     documentation:
-        host: localhost:9002
+        host: localhost:9100
         schemes: [http, https]
         info:
             title: My App
@@ -28,5 +28,5 @@ nelmio_api_doc:
     areas: # to filter documented areas
         path_patterns:
             - ^/api(?!/doc$) # Accepts routes under /api except /api/doc
-    models: { use_jms: true }
+    models: { use_jms: false }
 
