--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,12 @@
         "symfony/asset": "^4.0",
         "symfony/cache": "^4.0",
         "symfony/console": "^4.0",
+        "symfony/expression-language": "^4.0",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/maker-bundle": "^1.3",
         "symfony/messenger": "^4.0",
+        "symfony/mime": "^4.3@dev",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer": "^4.0",
