--- a/.env.dist
+++ b/.env.dist
@@ -22,14 +22,12 @@ DATABASE_URL=mysql://root:root@127.0.0.1:3306/api?charset=utf8mb4&serverVersion=
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
-
-###> lexik/jwt-authentication-bundle ###
-# Key paths should be relative to the project directory
-JWT_PRIVATE_KEY_PATH=config/jwt/private.pem
-JWT_PUBLIC_KEY_PATH=config/jwt/public.pem
-JWT_PASSPHRASE=560c3a11032318743523c8098dbcc532
-###< lexik/jwt-authentication-bundle ###
-
 ###> symfony/messenger ###
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 ###< symfony/messenger ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=21420673468796075e02515958f292d8
+###< lexik/jwt-authentication-bundle ###
