--- a/composer.json
+++ b/composer.json
@@ -5,10 +5,8 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.3",
-        "friendsofsymfony/user-bundle": "^2.1",
-        "gesdinet/jwt-refresh-token-bundle": "^0.5.3",
         "jms/serializer-bundle": "^2.3",
-        "lexik/jwt-authentication-bundle": "^2.4",
+        "lexik/jwt-authentication-bundle": "2.6.3",
         "nelmio/api-doc-bundle": "^3.3",
         "sensio/framework-extra-bundle": "^5.1",
         "sly/notification-pusher": "^2.3",
