--- a/config/packages/lexik_jwt_authentication.yaml
+++ b/config/packages/lexik_jwt_authentication.yaml
@@ -1,4 +1,4 @@
 lexik_jwt_authentication:
-    private_key_path: '%kernel.project_dir%/%env(JWT_PRIVATE_KEY_PATH)%'
-    public_key_path: '%kernel.project_dir%/%env(JWT_PUBLIC_KEY_PATH)%'
+    secret_key: '%env(resolve:JWT_SECRET_KEY)%'
+    public_key: '%env(resolve:JWT_PUBLIC_KEY)%'
     pass_phrase: '%env(JWT_PASSPHRASE)%'
