--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,10 +1,12 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     encoders:
-        FOS\UserBundle\Model\UserInterface: sha512
+        App\Entity\User: sha512
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username_email
+        api_user:
+            entity:
+                class: App\Entity\User
+                property: email
 
     firewalls:
 
@@ -21,7 +23,7 @@ security:
             pattern:  ^/api/login_check
             stateless: true
             anonymous: true
-            provider: fos_userbundle
+            provider: api_user
             form_login:
                 check_path:     /api/login_check
                 username_parameter: username
@@ -35,14 +37,14 @@ security:
             methods: [POST]
             anonymous: true
             stateless: true
-            provider: fos_userbundle
+            provider: api_user
 
         api:
             pattern:   ^/api/v1/meetings
             methods: [POST, PUT, DELETE]
             stateless: true
             anonymous: false
-            provider: fos_userbundle
+            provider: api_user
             lexik_jwt:
                 authorization_header:
                     enabled: true
@@ -56,7 +58,7 @@ security:
             methods: [POST, PATCH, DELETE]
             stateless: true
             anonymous: false
-            provider: fos_userbundle
+            provider: api_user
             lexik_jwt:
                 authorization_header:
                     enabled: true
