--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
         "ext-iconv": "*",
         "friendsofsymfony/rest-bundle": "^2.3",
         "jms/serializer-bundle": "^2.3",
-        "lexik/jwt-authentication-bundle": "2.6.3",
         "nelmio/api-doc-bundle": "^3.3",
         "sensio/framework-extra-bundle": "^5.1",
         "sly/notification-pusher": "^2.3",
@@ -22,6 +21,7 @@
         "symfony/mime": "^4.3@dev",
         "symfony/monolog-bundle": "^3.2",
         "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "^4.0",
         "symfony/serializer": "^4.0",
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/templating": "^4.0",
