--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,83 +1,22 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
-    encoders:
-        App\Entity\User: sha512
     providers:
-        api_user:
-            entity:
-                class: App\Entity\User
-                property: email
-
+        in_memory: { memory: ~ }
     firewalls:
-
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        main:
+            anonymous: true
+
             # activate different ways to authenticate
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
+            # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-        login:
-            pattern:  ^/api/login_check
-            stateless: true
-            anonymous: true
-            provider: api_user
-            form_login:
-                check_path:     /api/login_check
-                username_parameter: username
-                password_parameter: password
-                require_previous_session: false
-                success_handler: lexik_jwt_authentication.handler.authentication_success
-                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+            # https://symfony.com/doc/current/security/impersonating_user.html
+            # switch_user: true
 
-        user_create:
-            pattern:  ^/api/v1/meetings/user
-            methods: [POST]
-            anonymous: true
-            stateless: true
-            provider: api_user
-
-        api:
-            pattern:   ^/api/v1/meetings
-            methods: [POST, PUT, DELETE]
-            stateless: true
-            anonymous: false
-            provider: api_user
-            lexik_jwt:
-                authorization_header:
-                    enabled: true
-                    prefix:  Bearer
-                throw_exceptions:        false
-                create_entry_point:      true
-                    # Easy way to control access for large sections of your site
-                    # Note: Only the *first* access control that matches will be used
-        tag:
-            pattern:   ^/api/v1/tag
-            methods: [POST, PATCH, DELETE]
-            stateless: true
-            anonymous: false
-            provider: api_user
-            lexik_jwt:
-                authorization_header:
-                    enabled: true
-                    prefix:  Bearer
-                throw_exceptions:        false
-                create_entry_point:      true
-
-        refresh:
-            pattern:  ^/api/token/refresh
-            stateless: true
-            anonymous: true
-
+    # Easy way to control access for large sections of your site
+    # Note: Only the *first* access control that matches will be used
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
-        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/login_check, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/token/refresh, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1/meetings/user, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1/meetings, roles: [IS_AUTHENTICATED_FULLY, ROLE_API, ROLE_ADMIN] }
-        - { path: ^/api/v1/tag, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/v1/meetings/registration, roles: [IS_AUTHENTICATED_FULLY, ROLE_API, ROLE_ADMIN] }
