--- a/composer.json
+++ b/composer.json
@@ -4,13 +4,8 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
-        "friendsofsymfony/rest-bundle": "^2.3",
-        "jms/serializer-bundle": "^2.3",
-        "nelmio/api-doc-bundle": "^3.3",
-        "sensio/framework-extra-bundle": "^5.1",
-        "sly/notification-pusher": "^2.3",
-        "symfony/amqp-pack": "^1.0",
-        "symfony/asset": "^4.0",
+        "friendsofsymfony/rest-bundle": "^2.6",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/cache": "^4.0",
         "symfony/console": "^4.0",
         "symfony/expression-language": "^4.0",
@@ -20,13 +15,11 @@
         "symfony/messenger": "^4.0",
         "symfony/mime": "^4.3@dev",
         "symfony/monolog-bundle": "^3.2",
+        "symfony/options-resolver": "^4.0",
         "symfony/orm-pack": "^1.0",
         "symfony/security-bundle": "^4.0",
         "symfony/serializer": "^4.0",
-        "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/templating": "^4.0",
         "symfony/translation": "^4.0",
-        "symfony/twig-bundle": "^4.0",
         "symfony/validator": "^4.0",
         "symfony/workflow": "^4.0",
         "symfony/yaml": "^4.0"
@@ -36,7 +29,8 @@
         "rector/rector": "^0.4.11",
         "symfony/dotenv": "^4.0",
         "symfony/phpunit-bridge": "^4.0",
-        "symfony/web-server-bundle": "^4.0"
+        "symfony/web-server-bundle": "^4.0",
+        "vimeo/psalm": "^3.6"
     },
     "config": {
         "preferred-install": {
