--- a/.env.dist
+++ b/.env.dist
@@ -15,6 +15,14 @@ APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
 # Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/api?charset=utf8mb4&serverVersion=mariadb-10.2.14
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
+
 ###> symfony/messenger ###
+# Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
