--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -1,9 +1,14 @@
 framework:
     messenger:
+        # Uncomment this (and the failed transport below) to send failed messages to this transport for later handling.
+        # failure_transport: failed
+
         transports:
-            # Uncomment the following line to enable a transport named "amqp"
-            default: '%env(MESSENGER_ADAPTER_DSN)%'
+            # https://symfony.com/doc/current/messenger.html#transport-configuration
+            # async: '%env(MESSENGER_TRANSPORT_DSN)%'
+            # failed: 'doctrine://default?queue_name=failed'
+            # sync: 'sync://'
 
         routing:
             # Route your messages to the transports
-            'App\Message\MeetingMessage': [default]
+            # 'App\Message\YourMessage': async
