--- a/config/routes/annotations.yaml
+++ b/config/routes/annotations.yaml
@@ -2,4 +2,4 @@ controllers:
     resource: ../../src/Controller/
     type: annotation
     name_prefix: api_
-    prefix: /api/{version}
+    prefix: /api
