--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,10 @@ services:
     App\MessageHandler\:
         resource: '../src/MessageHandler'
         tags: ['messenger.message_handler']
+
+    app.my_custom_redis_provider:
+        class: \Redis
+        factory: ['Symfony\Component\Cache\Adapter\RedisAdapter', 'createConnection']
+        arguments:
+            - 'redis://localhost'
+            - { retry_interval: 2, timeout: 10 }
