--- a/composer.json
+++ b/composer.json
@@ -2,35 +2,22 @@
     "type": "project",
     "license": "proprietary",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.2.5",
+        "ext-ctype": "*",
         "ext-iconv": "*",
-        "friendsofsymfony/rest-bundle": "^2.6",
-        "sensio/framework-extra-bundle": "^5.5",
-        "symfony/cache": "^4.0",
-        "symfony/console": "^4.0",
-        "symfony/expression-language": "^4.0",
-        "symfony/flex": "^1.0",
-        "symfony/framework-bundle": "^4.0",
-        "symfony/maker-bundle": "^1.3",
-        "symfony/messenger": "^4.0",
-        "symfony/mime": "^4.3@dev",
-        "symfony/monolog-bundle": "^3.2",
-        "symfony/options-resolver": "^4.0",
-        "symfony/orm-pack": "^1.0",
-        "symfony/security-bundle": "^4.0",
-        "symfony/serializer": "^4.0",
-        "symfony/translation": "^4.0",
-        "symfony/validator": "^4.0",
-        "symfony/workflow": "^4.0",
-        "symfony/yaml": "^4.0"
+        "doctrine/doctrine-migrations-bundle": "^2.1",
+        "predis/predis": "^1.1",
+        "symfony/console": "5.0.*",
+        "symfony/dotenv": "5.0.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "5.0.*",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/yaml": "5.0.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.0",
-        "rector/rector": "^0.4.11",
-        "symfony/dotenv": "^4.0",
-        "symfony/phpunit-bridge": "^4.0",
-        "symfony/web-server-bundle": "^4.0",
-        "vimeo/psalm": "^3.6"
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/profiler-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
@@ -49,7 +36,10 @@
         }
     },
     "replace": {
+        "paragonie/random_compat": "2.*",
+        "symfony/polyfill-ctype": "*",
         "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
         "symfony/polyfill-php71": "*",
         "symfony/polyfill-php70": "*",
         "symfony/polyfill-php56": "*"
@@ -57,7 +47,6 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
             "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
@@ -72,8 +61,8 @@
     },
     "extra": {
         "symfony": {
-            "id": "01C9VT6HYPHK8210Y693HKVWQZ",
-            "allow-contrib": true
+            "allow-contrib": false,
+            "require": "5.0.*"
         }
     }
 }
