--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,23 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "^2.1",
+        "friendsofsymfony/rest-bundle": "^3.0",
+        "gesdinet/jwt-refresh-token-bundle": "^0.9.1",
+        "lexik/jwt-authentication-bundle": "^2.10",
+        "nelmio/api-doc-bundle": "^4.0",
         "predis/predis": "^1.1",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
+        "symfony/asset": "5.2.*",
+        "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.0.*",
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
         "symfony/serializer-pack": "^1.0",
-        "symfony/yaml": "5.0.*"
+        "symfony/validator": "5.2.*",
+        "symfony/yaml": "5.2.*"
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/maker-bundle": "^1.14",
         "symfony/profiler-pack": "^1.0"
     },
@@ -62,7 +69,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.0.*"
+            "require": "5.2.*"
         }
     }
 }
