--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -2,20 +2,9 @@
 #    path: /
 #    controller: App\Controller\DefaultController::index
 
-fos_user_security_check:
+api_login_check:
     path: /api/login_check
-    defaults: { _controller: FOSUserBundle:Security:check }
-    requirements:
-        _method: POST
-
-fos_user_security_login:
-    path:  /login
-    defaults:  { _controller: FOSUserBundle:Security:login, _method: POST }
-
-fos_user_security_logout:
-    path:    /logout
-    defaults:  { _controller: FOSUserBundle:Security:logout, _method: POST }
 
 gesdinet_jwt_refresh_token:
-    path:     /api/token/refresh
-    defaults: { _controller: gesdinet.jwtrefreshtoken:refresh }
+    path:       /api/token/refresh
+    controller: gesdinet.jwtrefreshtoken::refresh
