--- a/config/services.yaml
+++ b/config/services.yaml
@@ -40,3 +40,9 @@ services:
         arguments:
             - 'redis://localhost'
             - { retry_interval: 2, timeout: 10 }
+
+    gesdinet.jwtrefreshtoken.refresh_token_manager:
+        class: App\Doctrine\RefreshTokenManager
+        public: true
+        arguments: [ '@doctrine.orm.default_entity_manager', 'Gesdinet\JWTRefreshTokenBundle\Entity\RefreshToken']
+
